[tool.poetry]
name = "raft"
version = "0.1.0"
description = ""
authors = ["Markiian Mandzak <markmandzak2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.0"
torch = "^2.5.1"
pillow = "^11.0.0"
scipy = "^1.14.1"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
